[project]
name = "tornado-02-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "asyncpg>=0.30.0",
    "databases[postgresql]>=0.9.0",
    "fastapi[standard]>=0.116.1",
    "sqlalchemy>=2.0.42",
    "uvicorn[standard]>=0.35.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.10",
    "openai>=1.37.0",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "Pillow>=10.5.0",
    "pytesseract>=0.3.10",
    "pypdf>=4.4.0",
    "google-cloud-vision>=3.9.0",
    "markdown>=3.6",
    "lxml>=5.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.8",
]
